<resources>

    <!-- Home -->
    <string name="app_name">PHANToM GPS</string>
    <string name="xposed_desc">PHANToM GPS: a GPS setter based on the Xposed framework.</string>
    <string name="search">Search</string>
    <string name="address">United States</string>
    <string name="favorites">Favorites</string>
    <string name="address_not_found">Address not found</string>
    <string name="cant_save">Can\'t save</string>
    <string name="location_set">Location set</string>
    <string name="title">Location set notification</string>
    <string name="des">Show notification when location is set</string>
    <string name="location_unset">Location unset</string>
    <string name="no_internet">No Internet</string>
    <string name="getlocation_desc">Get current location</string>
    <string name="addfavorite_desc">Add favorite</string>

    <!-- Errors -->
    <string name="error_xposed_module_missing">Xposed module is not enabled</string>
    <string name="error_xposed_module_missing_desc">Enable this module in LSPosed Manager</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="about_info">Brought to you by \n@jqssun (2024-2025) \n@Android1500 (2022-2023) \n\nPHANToM GPS: a GPS setter based on the Xposed framework.</string>

    <!-- Update -->
    <string name="download_manager_description">Downloading update</string>
    <string name="update_button">Update</string>
    <string name="update_available">Update available</string>
    <string name="bs_update_download_failed">Failed</string>


    <!-- Dialog -->
    <string name="add_fav_dialog_title">Add favorite</string>
    <string name="dialog_button_add">Add</string>
    <string name="location_not_select">Location not selected</string>
    <string name="save">Save</string>

    <!-- SettingActivity -->
    <string name="xposed">Xposed</string>
    <string name="settings">Settings</string>
    <string name="settings_of_accuracy">Accuracy</string>
    <string name="preference_category_general">General</string>
    <string name="enter_valid_input">Enter a valid number</string>
    <string name="delete_favorite_item">Delete favorite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="check_update">Check for updates</string>
    <string name="check_update_summary">Automatically check the latest version from GitHub</string>
    <string name="enable_joystick">Use joystick</string>
    <string name="enable_joystick_summary">Control your location with a joystick (experimental)</string>
    <string name="advanced_hook">Hook system location</string>
    <string name="advanced_summary">Hook system for better location setting (reboot required)</string>
    <string name="random_position">Random location</string>
    <string name="random_position_summary">Use a random location around the set location</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="app_update_failed">Update failed</string>
    <string name="dark_theme">Dark theme</string>
    <string name="action_stop">Stop</string>
    <string name="clipboard_monitor_title">Clipboard monitor</string>
    <string name="clipboard_monitor_desc">Listening for location in clipboard</string>
    <string name="clipboard_monitor_channel_desc">Background clipboard listener</string>
    <string name="clipboard_monitor_toggle">Clipboard monitor</string>
    <string name="clipboard_monitor_toggle_summary">Enable listening for locations copied to clipboard</string>
    <string name="clipboard_auto_start">Auto start from clipboard</string>
    <string name="clipboard_auto_start_summary">Start location immediately after finding a match</string>
    <string name="action_start">Start</string>
    <string name="location_ready">Location ready</string>
    <string name="clipboard_searching_title">Searching location</string>
    <string name="clipboard_searching_desc">From clipboard: %1$s</string>
    <string name="clipboard_found_title">Location found</string>
    <string name="clipboard_found_desc">%1$s (%2$s)</string>
    <string name="clipboard_not_found_title">Location not found</string>
    <string name="clipboard_not_found_desc">Could not find coordinates for: %1$s</string>
    <string name="clipboard_outside_th_title">Outside Thailand blocked</string>
    <string name="clipboard_outside_th_desc">%1$s matched %2$s, but this is outside Thailand</string>
    <string name="firebase_login_title">PHANToM GPS login</string>
    <string name="firebase_login_summary">Sign in with email/password</string>
    <string name="firebase_login_dialog_title">PHANToM GPS login</string>
    <string name="firebase_email_hint">Email</string>
    <string name="firebase_password_hint">Password</string>
    <string name="firebase_login_success">PHANToM GPS login success</string>
    <string name="firebase_login_failed">PHANToM GPS login failed</string>
    <string name="firebase_login_fill_all">Please enter email and password</string>
    <string name="firebase_session_sync_failed">Unable to activate online session</string>
    <string name="session_locked_title">Session locked</string>
    <string name="session_locked_desc">This app license is locked. Please verify your license or activate again.</string>
    <string name="session_locked_notif_desc">Session check failed in background. Tap to login again.</string>
    <string name="session_locked_login_button">PHANToM GPS login</string>
    <string name="activation_title">Activate PHANToM GPS</string>
    <string name="activation_subtitle">Enter your activation code once to unlock this device.</string>
    <string name="activation_code_hint">Activation code</string>
    <string name="activation_button">Activate app</string>
    <string name="activation_error_not_found">Activation code not found.</string>
    <string name="activation_error_expired">This activation code expired. Please generate a new one from the installer.</string>
    <string name="activation_error_revoked">This activation code has been revoked.</string>
    <string name="activation_error_used">This activation code is already used on another device.</string>
    <string name="activation_error_network">Unable to reach the license server right now.</string>
    <string name="activation_error_generic">Activation failed. Please try again.</string>
    <string name="license_retry_button">Verify again</string>
    <string name="license_reactivate_button">Activate again</string>
    <string name="license_locked_reason_retryable">We could not reach the license server. Please reconnect and try again.</string>
    <string name="license_locked_reason_revoked">This license has been revoked.</string>
    <string name="license_locked_reason_device_mismatch">This license belongs to another device.</string>
    <string name="license_locked_reason_invalid">The saved license is no longer valid.</string>
    <string name="license_locked_reason_package_mismatch">This license does not match this app package.</string>
    <string name="license_locked_reason_missing">This license could not be found on the server.</string>
    <string name="license_locked_reason_generic">This device cannot use the app until the license is verified again.</string>

</resources>
